[package]
name = "scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.196", features = ["derive"] }
thirtyfour = { git = "https://github.com/stevepryde/thirtyfour" }
rayon = "1.8.1"
tokio = { version = "1.36.0", features = ["full"] }
base64 = "0.21.7"
serde_json = "1.0.113"
image_hasher = "1.2.0"
reqwest = "0.11.24"
crossterm = "0.27.0"
lazy_static = "1.4.0"
ratatui = { version = "0.26.0", features = ["all-widgets"] }
scopeguard = { version = "1.2.0" }
Inflector = "0.11.4"
fastembed = "2.0.1"
tempfile = "3.10.0"
url = "2.5.0"
quote = "1.0.35"
anyhow = "1.0.79"
fantoccini = { version = "0.19.3" }
chrono = "0.4.34"

derive_more = { version = "0.99.17" }
strum = "0.26.1"
strum_macros = "0.26.1"
async-std = "1.12.0"
deadqueue = "0.2.4"
